--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>卒業までのカウントダウン</title>
+<title>あなたは？</title>
 <head>
 <iframe src="https://quizexe.wixsite.com/aaaaa" oncontextmenu="return false;" frameborder="0" style="border: none" ></iframe>
 <style type="text/css">
